<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".ScreenView">

  <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioButton
        android:id="@+id/radBtnScreenOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnScreenOneFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onePointFiveMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnScreenTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoMultiple"
        android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioButton
        android:id="@+id/radBtnScreenTwoFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoPointFiveMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnScreenThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnScreenThreeFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threePointFiveMultiple"
        android:textSize="@dimen/fontSize" />
    </LinearLayout>
  </RadioGroup>

  <RadioGroup
    android:layout_marginTop="@dimen/margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

      <RadioButton
        android:id="@+id/radBtnNoCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoCut"
        android:textSize="@dimen/fontSize"/>

      <RadioButton
        android:id="@+id/radBtnOneCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OneCut"
        android:textSize="@dimen/fontSize"/>
  </RadioGroup>

  <EditText
    android:id="@+id/txtScreenAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/amount" />

  <EditText
    android:id="@+id/txtScreenLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/length" />

  <EditText
    android:id="@+id/txtScreenWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/width" />

  <EditText
    android:id="@+id/txtScreenFabricWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/fabricWidth" />

  <Button
    android:id="@+id/btnScreenCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:text="@string/calculate" />

  <TextView
    android:id="@+id/lblScreenResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:textSize="@dimen/fontSize"/>
</LinearLayout>