<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center"
  android:orientation="vertical"
  tools:context=".CurtainView">

  <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioButton
        android:id="@+id/radBtnCurtainOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oneMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnCurtainOneFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onePointFiveMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnCurtainTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoMultiple"
        android:textSize="@dimen/fontSize" />
    </LinearLayout>

    <LinearLayout
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal">
      <RadioButton
        android:id="@+id/radBtnCurtainTwoFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twoPointFiveMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnCurtainThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threeMultiple"
        android:textSize="@dimen/fontSize" />

      <RadioButton
        android:id="@+id/radBtnCurtainThreeFive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/threePointFiveMultiple"
        android:textSize="@dimen/fontSize" />
    </LinearLayout>
  </RadioGroup>

  <RadioGroup
    android:layout_marginTop="@dimen/margin"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

      <RadioButton
        android:id="@+id/radBtnNoCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NoCut"
        android:textSize="@dimen/fontSize"/>

      <RadioButton
        android:id="@+id/radBtnOneCut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OneCut"
        android:textSize="@dimen/fontSize"/>
  </RadioGroup>

  <EditText
    android:id="@+id/txtCurtainAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/amount" />

  <EditText
    android:id="@+id/txtCurtainLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/length" />

  <EditText
    android:id="@+id/txtCurtainWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/width" />

  <EditText
    android:id="@+id/txtCurtainFabricWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/fabricWidth" />

  <Button
    android:id="@+id/btnCurtainCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:text="@string/calculate" />

  <TextView
    android:id="@+id/lblCurtainResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:textSize="@dimen/fontSize"
    android:textColor="@color/black"/>
</LinearLayout>