<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".ClipView">

  <EditText
    android:id="@+id/txtSkirtAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/skirtAmount"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtSkirtLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/skirtLength"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/amount"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtLength"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/length"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/width"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtFabricWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:ems="10"
    android:hint="@string/fabricWidth"
    android:inputType="numberDecimal" />

  <Button
    android:id="@+id/btnClipCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:text="@string/calculate"
    android:textSize="@dimen/fontSize" />

  <TextView
    android:id="@+id/lblResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin"
    android:textSize="@dimen/fontSize"
    android:textColor="@color/black"/>
</LinearLayout>