<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".WeightAndAmountView">

  <EditText
    android:id="@+id/txtWeight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/Weight"
    android:inputType="numberDecimal" />

  <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/radbtnSatin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:text="@string/Satin"
      android:textSize="18sp"
      android:layout_marginRight="20dp" />

    <RadioButton
      android:id="@+id/radbtnPoplin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/Poplin"
      android:textSize="18sp" />
  </RadioGroup>

  <RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:orientation="horizontal">

    <RadioButton
      android:id="@+id/radbtnSmall"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="20dp"
      android:text="@string/SmallTube"
      android:textSize="18sp"
      android:layout_marginRight="20dp" />

    <RadioButton
      android:id="@+id/radbtnBig"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/BigTube"
      android:textSize="18sp" />
  </RadioGroup>

  <Button
    android:id="@+id/btnWeightAmountCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:textAllCaps="false"
    android:text="@string/calculate"
    android:textSize="18sp"/>

  <TextView
    android:id="@+id/lblWeightAmountResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="40dp"
    android:textSize="18sp"
    android:textColor="@color/black"/>

</LinearLayout>