<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:gravity="center"
  tools:context=".HoleView">

  <EditText
    android:id="@+id/txtHoleCurtainAmount"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:importantForAutofill="no"
    android:hint="@string/amount"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtHoleCurtainHeight"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin2"
    android:ems="10"
    android:importantForAutofill="no"
    android:hint="@string/height"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtHoleImageSize"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin2"
    android:ems="10"
    android:importantForAutofill="no"
    android:hint="@string/imageSize"
    android:inputType="numberDecimal" />

  <EditText
    android:id="@+id/txtHoleFabricWidth"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin2"
    android:ems="10"
    android:hint="@string/fabricWidth"
    android:inputType="numberDecimal"
    android:importantForAutofill="no" />

  <Button
    android:id="@+id/btnHoleCalculate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin2"
    android:text="@string/calculate"
    android:textSize="@dimen/fontSize" />

  <TextView
    android:id="@+id/lblHoleResult"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin2"
    android:textSize="@dimen/fontSize"
    android:textColor="@color/black"
    android:textAlignment="center"
    android:gravity="center_horizontal" />
</LinearLayout>